--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/despesas_financas_tcc?useTimezone=true&serverTimezone=UTC # URL de conexão para um banco de dados H2 em memória
+    url: jdbc:mysql://localhost:3306/despesas_financas_tcc?useTimezone=true&serverTimezone=UTC
     username: root
     password: admin123
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       dialect: org.hibernate.dialect.MySQL8Dialect
-    show-sql: true
+    show-sql: false
 jwt:
   secret: VkRGU1JsTXdkRVpVYTFaSlZsVXhRMVF3YkZCVVJXeFBVMFZGUFE9PQ==
-  expiration: 15
+  expiration: 2
 
