--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,12 +8,12 @@ spring:
     properties.mail.smtp.starttls.enable: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://google/despesa_financas_tcc?cloudSqlInstance=stable-dogfish-407015:us-central1:mydbdespesastcc&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+    url: jdbc:mysql://localhost:3306/despesas_financas_tcc?useTimezone=true&serverTimezone=UTC
     username: root
     password: admin123
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
