--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,15 +8,15 @@ spring:
     properties.mail.smtp.starttls.enable: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/despesas_financas_tcc?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://coincontroldb.ckxzgaohpes2.us-east-2.rds.amazonaws.com:3306/coincontroltcc
     username: root
-    password: admin123
+    password: 987;.,asd
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       dialect: org.hibernate.dialect.MySQL8Dialect
-    show-sql: false
+    show-sql: true
 jwt:
   secret: VkRGU1JsTXdkRVpVYTFaSlZsVXhRMVF3YkZCVVJXeFBVMFZGUFE9PQ==
   expiration: 24
