--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,15 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: coincontroltcc@gmail.com
-    password: cxlg aouf mydt vnmn
+    username: ${USERNAME_SMTP}
+    password: ${PASSWORD_SMTP}
     properties.mail.smtp.auth: true
     properties.mail.smtp.starttls.enable: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://coincontroldb.ckxzgaohpes2.us-east-2.rds.amazonaws.com:3306/coincontroltcc
-    username: root
-    password: 987;.,asd
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
@@ -18,7 +18,7 @@ spring:
       dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
 jwt:
-  secret: VkRGU1JsTXdkRVpVYTFaSlZsVXhRMVF3YkZCVVJXeFBVMFZGUFE9PQ==
+  secret: ${JWT_SECRET}
   expiration: 24
   expiration-email: 15
 
