--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,14 +8,14 @@ spring:
     properties.mail.smtp.starttls.enable: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DATABASE_URL}
-    username: ${DATABASE_USERNAME}
-    password: ${DATABASE_PASSWORD}
+    url: jdbc:mysql://localhost:3306/despesas_financas_tcc?useTimezone=true&serverTimezone=UTC
+    username: root
+    password: admin123
   jpa:
     hibernate:
       ddl-auto: create
     properties:
-      dialect: org.hibernate.dialect.PostgreSQLDialect
+      dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
 jwt:
   secret: VkRGU1JsTXdkRVpVYTFaSlZsVXhRMVF3YkZCVVJXeFBVMFZGUFE9PQ==
