--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,23 +2,22 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${USERNAME_SMTP}
-    password: ${PASSWORD_SMTP}
+    username: coincontroltcc@gmail.com
+    password: cxlg aouf mydt vnmn
     properties.mail.smtp.auth: true
     properties.mail.smtp.starttls.enable: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DATABASE_URL}
-    username: ${DATABASE_USERNAME}
-    password: ${DATABASE_PASSWORD}
+    url: jdbc:mysql://192.168.0.201:3306/coincontrol
+    username: root
+    password: teste1095
   jpa:
     hibernate:
-      ddl-auto: update
-    properties:
+      ddl-auto: create
       dialect: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
 jwt:
-  secret: ${JWT_SECRET}
+  secret: VkRGU1JsTXdkRVpVYTFaSlZsVXhRMVF3YkZCVVJXeFBVMFZGUFE9PQ==
   expiration: 24
   expiration-email: 15
 
